# simple_kafka

./: CMakeLists.txt  README.md
cmake/: librdkafka.cmake  simple_logger.cmake
include/simple_kafka/: client.h  common.h  config.h  exceptions.h
src/: client.cpp  common.cpp  config.cpp  exceptions.cpp
tests/: CMakeLists.txt  test_client.cpp  test_config.cpp
